--- a/smrc/package.json
+++ b/smrc/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1"
