--- a/smrc/package.json
+++ b/smrc/package.json
@@ -8,6 +8,7 @@
     "react": "^18.0.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1"
   },
