--- a/smrc/package.json
+++ b/smrc/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
