--- a/smrc/package.json
+++ b/smrc/package.json
@@ -9,6 +9,7 @@
     "@mui/x-date-pickers": "^7.27.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^18.0.0",
     "react-curved-text": "^3.0.1",
