--- a/smrc/package.json
+++ b/smrc/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.0.0",
